--- a/package.json
+++ b/package.json
@@ -25,13 +25,27 @@
     "stats",
     "languages"
   ],
-  "author": "Ionică Bizău <bizauionica@gmail.com>",
+  "author": "Ionică Bizău <bizauionica@gmail.com> (http://ionicabizau.net)",
   "license": "KINDLY",
   "bugs": {
     "url": "https://github.com/IonicaBizau/node-gh-polyglot/issues"
   },
   "homepage": "https://github.com/IonicaBizau/node-gh-polyglot",
   "blah": {
-    "h_img": "http://i.imgur.com/wQ2eGDb.png"
+    "h_img": "http://i.imgur.com/wQ2eGDb.png",
+    "installation": [
+      {
+        "p": "Using this library on the client side is possible as well, but it's dependent on [`gh.js`](https://github.com/IonicaBizau/gh.js)."
+      },
+      {
+        "code": {
+          "language": "html",
+          "content": [
+            "<script src=\"path/to/gh.js\"></script>",
+            "<script src=\"path/to/gh-polyglot.js\"></script>"
+          ]
+        }
+      }
+    ]
   }
 }
