--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gh-polyglot",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "description": "Get language stats about GitHub users and repositories.",
   "main": "lib/index.js",
   "directories": {
@@ -47,5 +47,16 @@
         }
       }
     ]
-  }
+  },
+  "files": [
+    "bin/",
+    "app/",
+    "lib/",
+    "dist/",
+    "src/",
+    "resources/",
+    "menu/",
+    "cli.js",
+    "index.js"
+  ]
 }
