--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "languages"
   ],
   "author": "Ionică Bizău <bizauionica@gmail.com> (https://ionicabizau.net)",
+  "contributors": [
+    "Evan Baker (github.com/rbtr)"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/IonicaBizau/node-gh-polyglot/issues"
